fix dark mode base colors

--- a/packages/ui/src/components/Toast/Toast.module.css
+++ b/packages/ui/src/components/Toast/Toast.module.css
@@ -2,7 +2,7 @@
   @apply max-w-xs w-full shadow-lg rounded-md pointer-events-auto overflow-hidden py-4 px-2;
 
   @apply border border-solid;
-  @apply bg-syrface-100 border-default;
+  @apply bg-surface-100 border-default;
 }
 
 .sbui-toast-container--sm {
